// SPDX-FileCopyrightText: Copyright 2025 Carabiner Systems, Inc
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";
package carabiner.policy.v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/struct.proto";
import "intoto.proto";

option go_package = "github.com/carabiner-dev/policy/api/v1";

message PolicySet {
    string id = 1;
    PolicySetMeta meta = 2;
    PolicySetCommon common = 3;
    repeated Policy policies = 4;
}

message PolicySetMeta {
    string runtime = 1;
    string description = 2;
    google.protobuf.Timestamp expiration = 3;
    int64 version = 4;
    string enforce = 5;
    repeated FrameworkRef frameworks = 6;
}

// FrameworkRef is a reference to a security framework. The reference binds
// the controls tested by each the policy to the the framework definition.  
message FrameworkRef {
    string id = 1; // String identifier for the framework
    string name = 2; // Security framework name
    ResourceDescriptor definition = 3; // Link to the framework definition
}

message PolicySetCommon {
    repeated Identity identities = 1;
    repeated PolicyRef references = 2;
    map<string, ContextVal> context = 3;
}

message Policy {
    string id = 1;
    PolicyRef source = 2;
    Meta meta = 3;
    map<string, ContextVal> context = 4;
    repeated ChainLink chain = 5;
    repeated Identity identities = 6;
    PredicateSpec predicates = 7;
    repeated Transformer transformers = 8;
    repeated Tenet tenets = 9;
}

message PolicyRef {
    string id = 1;
    int64 version = 2;
    Identity identity = 3;
    ResourceDescriptor location = 4;
}

message ChainLink {
    oneof source {
        ChainedPredicate predicate = 1;
        // ChainedOutput output = 2;
    };
}

// Meta contains information about the policy itself
message Meta {
    string runtime = 1;
    string description = 2;
    string assert_mode = 3;
    repeated Control controls = 4; 
    int64 version = 5;
    string enforce = 6;
    optional google.protobuf.Timestamp expiration = 7;
}

message Identity {
    string id = 1;
    optional IdentitySigstore sigstore = 2;
    optional IdentityKey key = 3;
    optional IdentityRef ref = 4;
}

// Control is a mapping tying the policy to an framework control
message Control {
    string id = 1;
    string class = 2;
    string framework = 3;
    string title = 4;
}

// IdentitySigstore represents the identity of a fulcio cert.
message IdentitySigstore {
    optional string mode = 1; // exact | regexp
    string issuer = 2; // https://accounts.google.com
    string identity = 3; //  "identity": "puerco@gmail.com"
}

// IdentityKey registers the data of s key used to sign the attestations
message IdentityKey {
    string id = 1;   // Key ID
    string type = 2; // Identity type
    string data = 3; // Public key data
}

// IdentityRef represents an external identity
message IdentityRef {
    string id = 1;
}

message ContextVal {
    string type = 1;
    optional bool required = 2;
    optional google.protobuf.Value value = 3;
    optional google.protobuf.Value default = 4;
}

message Error {
    string message = 1;
    string guidance = 2;
}

// Este hay que arreglarlo
message Transformer {
    string id = 1;
}

message PredicateSpec {
    repeated string types = 1;
    int32 limit = 2;
}

// Tenet
message Tenet {
    string id = 1;
    string runtime = 2;
    string code = 3;
    PredicateSpec predicates = 4;
    map <string, Output> outputs = 5;
    Error error = 6;
    string title = 7;
    Assessment assessment = 8;
}

message ChainedOutput {
    string policy = 1;
    string tenet = 2; 
}

message ChainedPredicate {
    string type = 1;
    string selector = 2;
    string runtime = 3;
    repeated Identity identities = 5;
}

message Assessment {
    string message = 1; 
}

message Output {
    string code = 1;
    google.protobuf.Value value = 2;
}
